Inicializando o container app e adicionando um volume para ser utilizado no container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,8 +18,9 @@ services:
     networks:
       - desafio_network
     tty: true
+    entrypoint: node index.js
     volumes:
-      - ./node:/usr/src/app
+      - vol_app:/usr/src/app
 
   db:
     image: mysql:5.7
@@ -28,7 +29,7 @@ services:
     restart: always
     tty: true
     volumes:
-      - "./mysql:/var/lib/mysql"
+      - ./mysql:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=desafio
       - MYSQL_ROOT_PASSWORD=root
@@ -38,3 +39,6 @@ services:
 networks:
   desafio_network:
     driver: bridge
+
+volumes:
+  vol_app:
