--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,9 +23,10 @@ services:
       - vol_app:/usr/src/app
 
   db:
-    image: mysql:5.7
-    command: --innodb-use-native-aio=0
+    build: 
+      context: ./db
     container_name: db
+    command: --innodb-use-native-aio=0
     restart: always
     tty: true
     volumes:
